# metamodule-21kHz-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  plugin-mm.json
.github/workflows/: build-metamodule-plugin.yml
